--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 </head>
 
 <body>
-    <h1>Projeto de barra de progresso</h1>
-    <script src="script.js"></script>
-</body>
 
+    <div class="container">
+        <div class="progess-container">
+            <div class="progress" id="progress"></div>
+            <div class="circle active">1</div>
+            <div class="circle ">2</div>
+            <div class="circle ">3</div>          
+            <div class="circle ">4</div>          
+        </div>
+        
+            <button class="btn" id="prev" disabled >Prev</button>
+            <button class="btn" id="next">Next</button>
+    </div>
+
+    <script src="script.js"></script>
+
+</body>
 </html>
